Added Box Shadow

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <a href="#navPanel" class="navPanelToggle"><span class="fa fa-bars"></span></a> 
         </div> -->   
       <div class="container text-center"> 
-        <div class="container container-fluid">
+        <div class="container container-fluid" style="border: 1px ; padding: 10px; box-shadow: 6px 6px 12px #888888;">
                   <a href="#" target="_blank"><img src="images/iiit-new.png" style="width:12%; float:left; margin-top: 2%; "></a>
                   <a href="http://vlabs.iiit.ac.in/" target="_blank"><img src="images/vlabs-logo.png"
                         style="width:16%; float:right;"></a>
